--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Иконка, которая будет на вкладке в браузере -->
 		<link rel="icon" href="/favicon.ico">
 		<!-- Заголовок на вкладке в браузере -->
-		<title>Грицак Руслан - начинающий веб-разработчик </title>
+		<title>Грицак Руслан - Frontend Developer </title>
 		<!-- Шрифты от Google -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
 
