--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  			<!-- /.col-7 -->
  			<div class="col-lg-5">
  				<div class="wrapper">
- 					<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.1s">Веб-разработчик</p>
+ 					<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.1s">Frontend Developer</p>
  					<h1 class="header-title wow fadeInRightBig" data-wow-delay="0.2s">Грицак Руслан</h1>
  					<p class="header-sub wow fadeInRightBig" data-wow-delay="0.3s">Верстка на HTML/CSS <br>
  					               Разработка сайтов под ключ</p>
